--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,13 @@
 /public/assets/n2n-impl-web-ui/
 /public/assets/n2nutil-jquery/
 /public/assets/rocket/
+/public/files/
+/var/bak/rocket/
 /var/etc/n2n/
 /var/etc/n2n-impl-persistence-orm/
 /var/etc/n2n-impl-web-dispatch/
 /var/etc/n2n-impl-web-ui/
 /var/etc/n2nutil-jquery/
 /var/etc/rocket/
-
+/var/log/
+/var/tmp/
