--- a/var/etc/app.ini
+++ b/var/etc/app.ini
@@ -1,7 +1,7 @@
 [general]
-page.name = "New awesome project"
+page.name = "Rocket Quickstart"
 
-application.name = "newAwesomeProject"
+application.name = "rocketquickstart"
 
 
 [web]
@@ -83,7 +83,7 @@ default.dialect = "n2n\impl\persistence\meta\mysql\MysqlDialect"
 
 
 [database : development]
-default.dsn_uri = "mysql:host=localhost;dbname=n2n7_test"
+default.dsn_uri = "mysql:host=localhost;dbname=test"
 default.user = "root"
 default.password = ""
 default.transaction_isolation_level = "SERIALIZABLE"
