--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,20 @@
 {
-    "name": "n2n/rocket-quickstart-skeleton",
-    "description": "rocket quickstart skeleton application installable by Composer",
-    "type": "project",
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "require": {
-        "n2n/n2n": "master-dev",
-        "n2n/n2n-batch": "master-dev",
-        "n2n/n2n-context": "master-dev",
-        "n2n/n2n-impl-persistence-meta": "master-dev",
-        "n2n/n2n-impl-persistence-orm": "master-dev",
-        "n2n/n2n-impl-web-dispatch": "master-dev",
-        "n2n/n2n-impl-web-ui": "master-dev",
-        "n2n/n2n-mail": "master-dev",
-        "php": ">=7.0",
-        "n2n/rocket": "master-dev"
-    }
+	"name" : "n2n/rocket-quickstart-skeleton",
+	"description" : "rocket quickstart skeleton application installable by Composer",
+	"type" : "project",
+	"minimum-stability" : "dev",
+	"prefer-stable" : true,
+	"require" : {
+		"n2n/n2n" : "master-dev",
+		"n2n/n2n-batch" : "master-dev",
+		"n2n/n2n-context" : "master-dev",
+		"n2n/n2n-impl-persistence-meta" : "master-dev",
+		"n2n/n2n-impl-persistence-orm" : "master-dev",
+		"n2n/n2n-impl-web-dispatch" : "master-dev",
+		"n2n/n2n-impl-web-ui" : "master-dev",
+		"n2n/n2n-mail" : "master-dev",
+		"php" : ">=7.0",
+		"n2n/rocket" : "master-dev",
+		"n2n/hangar" : "master-dev"
+	}
 }
