--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,20 @@
 {
-	"name" : "n2n/rocket-quickstart-skeleton",
-	"description" : "rocket quickstart skeleton application installable by Composer",
-	"type" : "project",
-	"minimum-stability" : "dev",
-	"prefer-stable" : true,
-	"require" : {
-		"n2n/n2n" : "7.1.x-dev",
-		"n2n/n2n-batch" : "7.1.x-dev",
-		"n2n/n2n-context" : "7.1.x-dev",
-		"n2n/n2n-impl-persistence-meta" : "7.1.x-dev",
-		"n2n/n2n-impl-persistence-orm" : "7.1.x-dev",
-		"n2n/n2n-impl-web-dispatch" : "7.1.x-dev",
-		"n2n/n2n-impl-web-ui" : "7.1.x-dev",
-		"n2n/n2n-mail" : "7.1.x-dev",
-		"php" : ">=7.0",
-		"n2n/rocket" : "1.1.x-dev",
-		"n2n/hangar" : "7.1.x-dev"
-	}
+    "description": "rocket quickstart skeleton application installable by Composer",
+    "minimum-stability": "dev",
+    "name": "n2n/rocket-quickstart-skeleton",
+    "prefer-stable": true,
+    "require": {
+        "n2n/hangar": "^7.1.0",
+        "n2n/n2n": "^7.1.12",
+        "n2n/n2n-batch": "^7.1.12",
+        "n2n/n2n-context": "^7.1.12",
+        "n2n/n2n-impl-persistence-meta": "^7.1.12",
+        "n2n/n2n-impl-persistence-orm": "^7.1.12",
+        "n2n/n2n-impl-web-dispatch": "^7.1.12",
+        "n2n/n2n-impl-web-ui": "^7.1.12",
+        "n2n/n2n-mail": "^7.1.12",
+        "n2n/rocket": "^1.1.5",
+        "php": ">=7.0"
+    },
+    "type": "project"
 }
